packages/build/tests/error/plugin_load/fixtures/top/plugin.js
module.exports = {
  name: 'netlify-plugin-test',
}

const throwError = function() {
  throw new Error('test')
}

throwError()
